fix layout issues in main container

--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -27,9 +27,14 @@ body {
 
 main {
   display: flex;
-  margin: 0 5%;
+  margin: 5%;
   align-items: center;
   flex-direction: column;
+}
+
+#tweets-container {
+  display: flex;
+  flex-direction: column-reverse;
 }
 
 /* Desktop Breakpoint */
